Change to wiki page

--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -4,7 +4,7 @@ The travel, transportation, and hotel arrangements are also available as a [[Med
 
 ===Agenda===
 
-* [[Media:{{MeetingAgenda}}|Original agenda]] as a PDF download
+* [[Media:Agenda.pdf |Original agenda]] as a PDF download
 * [[Agenda|Agenda]] with latest updates
 
 ===Resources===
