--- a/wiki/Template:Participant.mediawiki
+++ b/wiki/Template:Participant.mediawiki
@@ -1,1 +1,1 @@
-|{{{5}}}[[User:{{{1}}}{{{2}}}|{{{2}}}, {{{1}}}]]||{{{5}}}{{{3}}}{{{5}}}||[mailto:{{{4}}} {{{5}}}{{{4}}}{{{5}}}]
+|[[User:{{{1}}}{{{2}}}|{{{5}}}{{{2}}}, {{{1}}}{{{5}}}]]||{{{5}}}{{{3}}}{{{5}}}||{{{5}}}[mailto:{{{4}}} {{{4}}}{{{5}}}]
