Change to wiki page

--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -1,4 +1,4 @@
-<big>Developing and Integrating Taxonomic Databases for the 21st Century</big>
+<big>Title of the meeting</big>
 
 ===Wednesday, August 23===
 
