Change to wiki page

--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -2,7 +2,7 @@
 
 ===Wednesday, August 23===
 
-* 4:00-5:30 p.m.: Pre-Meeting tour of NESCent
+== 4:00-5:30 p.m.: Pre-Meeting tour of NESCent==
 
 ===Thursday, August 24=== 
 
