Change to wiki page

--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -9,10 +9,10 @@
 *7:45 a.m.: Millennium shuttle to NESCent
 *8:00 a.m.: Last Millennium shuttle to NESCent
 *8:00-8:30 a.m.: Coffee, bagels, fruit, etc. at NESCent
-*9:30-9:50 a.m.: speaker 1, UNC-Chapel Hill, [title 1]
+*9:30-9:50 a.m.: speaker 1, UNC-Chapel Hill, [[speak1 |title 1]]
 *... ...
 *10:15-10:35 a.m.: BREAK
-*10:40-11:10 a.m.: speaker 2, Duke University, [tile 2]
+*10:40-11:10 a.m.: speaker 2, Duke University, [[speak2 |title 2]]
 * ... ...
 *12: 30- 2:00 p.m.: LUNCH
 * ... ...
