Change to wiki page

--- a/wiki/Main_Page.mediawiki
+++ b/wiki/Main_Page.mediawiki
@@ -1,11 +1,8 @@
-<big>'''[Meeting tile]'''</big>
+<big>'''Meeting Tile'''</big>
 
-To login, click [[Special:Userlogin |here]]
+Use the links in the sidebar to navigate the wiki.
 
-Consult the [http://meta.wikipedia.org/wiki/MediaWiki_User%27s_Guide User's Guide] for information on using the wiki software.
+== MediaWiki Help if you need it ==
 
-== Getting started ==
-
-* [http://www.mediawiki.org/wiki/Help:Configuration_settings Configuration settings list]
+* [http://meta.wikipedia.org/wiki/MediaWiki_User%27s_Guide User's Guide]
 * [http://www.mediawiki.org/wiki/Help:FAQ MediaWiki FAQ]
-* [http://mail.wikipedia.org/mailman/listinfo/mediawiki-announce MediaWiki release mailing list]
