--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -18,7 +18,7 @@ In terms of office resources, there are fully networked printers you can use, as
 ==Hotel Arrangements==
 You will be staying at the [http://www.millenniumhotels.com/MCIL.nsf/LU_HOTELDOC/113$$HotelDescription?OpenDocument Millennium Hotel] in Durham, (2800 Campus Walk Avenue, Durham, NC  27705, telephone: (919) 383-8575).
 
-Reservations have been made for 4 nights’ lodging, Wednesday, September 6th through Saturday, September 9th.  The current agenda plans for you to arrive on Wednesday, September 6th, meet Thursday, Friday, and Saturday departing on Sunday, September 10th.  Check in time at the Millennium Hotel is 3:00 p.m. and check out time is noon.  Please contact Jeff Sturkey at NESCent via email [mailto:jsturkey@nescent.org Jeff Sturkey] or 919-668-4545 to make any changes to your room reservations.  The rooms will be directly billed to NESCent.  We will pay for your room, while you will be responsible for all other incidental room charges, including meals you might charge to your room.  If you are bringing a roommate, there will be an additional charge of $20.00 per person per night payable to the Millennium Hotel.
+Reservations have been made for 4 nights’ lodging, {{Start_Date}} through {{End_Date}}.  Check in time at the Millennium Hotel is 3:00 p.m. and check out time is noon.  Please contact Jeff Sturkey at NESCent via email [mailto:jsturkey@nescent.org Jeff Sturkey] or 919-668-4545 to make any changes to your room reservations.  The rooms will be directly billed to NESCent.  We will pay for your room, while you will be responsible for all other incidental room charges, including meals you might charge to your room.  If you are bringing a roommate, there will be an additional charge of $20.00 per person per night payable to the Millennium Hotel.
 
 ==Travel Arrangements==
 Please contact our travel agent, [mailto:mark@galegentrytravel.com Mark Eide], as soon as possible to arrange your airline travel.  Please note that as a condition of your invitation to participate in NESCent meetings, we ask that your travel plans be ticketed no less than 21 days in advance of your meeting.  In addition, our travel agent has been instructed to search for lower-cost airfares for all attendees.  
