--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -44,7 +44,7 @@ We suggest using the Millennium Hotel airport shuttle service.  This shuttle wil
 We will also coordinate shuttle service between the hotel and the NESCent office for your meeting.
 
 ==Meal Arrangements== 
-We will be basing your meal reimbursement on the [http://www.gsa.gov/Portal/gsa/ep/contentView.do?programId=9704&channelId=-15943&ooid=16365&contentId=17943&pageTypeId=8203&contentType=GSA_BASIC&programPage=%252Fep%252Fprogram%252FgsaBasic.jsp&P=MTT GSA Federal per diem rates].  We are able to reimburse participants up to a total of {{Total_Meal_Reimbursement}} for the meals at the meeting.  This includes meals on your arrival and departure days.  A major advantage of this system is that you are not required to keep or furnish NESCent with any meal receipts.  This system also offers significant flexibility in your choices of cuisine and meal times.  After the meeting, NESCent will process reimbursements which will be mailed within approximately 45 days.  Duke University policy dictates that these reimbursements must be sent to your home address.  Please complete the attached home address form and return it to NESCent prior to your arrival.
+NESCent-sponsored meeting participants are eligible for meal reimbursement. NESCent bases these amounts on the [http://www.gsa.gov/Portal/gsa/ep/contentView.do?programId=9704&channelId=-15943&ooid=16365&contentId=17943&pageTypeId=8203&contentType=GSA_BASIC&programPage=%252Fep%252Fprogram%252FgsaBasic.jsp&P=MTT GSA Federal per diem rates]. Individual reimbursement amounts will vary depending on the length of the meeting.  Please review the information specific to your meeting for the exact amount of eligible reimbursement.Please consult the information sent to you regarding travel and reimbursement for your specific meeting.
 
 ==Non-U.S. Citizens==
 We would appreciate your letting us know if you are not a US citizen.  If you will be arriving from outside the United States, we will provide you with a formal letter of invitation briefly outlining the purpose of your visit.  This letter may be required during your travel to the US, and we encourage you to keep a copy with you.  Please send via email your office mailing address so that we can send the formal letter of invitation.  For all non-US citizens we will need to make a copy of your passport and I-94 and/or visa waiver during your visit.
