--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -43,7 +43,7 @@ We suggest using the Millennium Hotel airport shuttle service.  This shuttle wil
 We will also coordinate shuttle service between the hotel and the NESCent office for your meeting.
 
 ==Meal Arrangements== 
-NESCent-sponsored meeting participants are eligible for meal reimbursement. NESCent bases these amounts on the [http://www.gsa.gov/Portal/gsa/ep/contentView.do?programId=9704&channelId=-15943&ooid=16365&contentId=17943&pageTypeId=8203&contentType=GSA_BASIC&programPage=%252Fep%252Fprogram%252FgsaBasic.jsp&P=MTT GSA Federal per diem rates]. Individual reimbursement amounts will vary depending on the length of the meeting.  Please review the information specific to your meeting for the exact amount of eligible reimbursement.Please consult the information sent to you regarding travel and reimbursement for your specific meeting.
+NESCent-sponsored meeting participants are eligible for meal reimbursement. NESCent bases these amounts on the [http://www.gsa.gov/Portal/gsa/ep/contentView.do?programId=9704&channelId=-15943&ooid=16365&contentId=17943&pageTypeId=8203&contentType=GSA_BASIC&programPage=%252Fep%252Fprogram%252FgsaBasic.jsp&P=MTT GSA Federal per diem rates]. Individual reimbursement amounts will vary depending on the length of the meeting.  Please review the information specific to your meeting for the exact amount of eligible reimbursement.
 
 ==Non-U.S. Citizens==
 We would appreciate your letting us know if you are not a US citizen.  If you will be arriving from outside the United States, we will provide you with a formal letter of invitation briefly outlining the purpose of your visit.  This letter may be required during your travel to the US, and we encourage you to keep a copy with you.  Please send via email your office mailing address so that we can send the formal letter of invitation.  For all non-US citizens we will need to make a copy of your passport and I-94 and/or visa waiver during your visit.
