Change to wiki page

--- a/wiki/Documents.mediawiki
+++ b/wiki/Documents.mediawiki
@@ -1,4 +1,4 @@
-''For collaborative writing of documents, you may wish to use [http://www.writely.com/ Writely]''
+''For collaborative writing of documents, you may wish to use [http://docs.google.com Google Docs]''
 
 ==Presentation Slides==
 
