--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -1,22 +1,92 @@
-<big>{{SITENAME}} Agenda</big>
- THIS IS A SAMPLE
+<big>WORKSHOP: NESCENT/PIRE – CATALYSIS GROUP MEETING: AGENDA</big>
 
-=Wednesday, Feb 29, 2007=
+ “Perspectives on the Origin and Conservation of Biodiversity in Patagonia”
+ Jack W. Sites, Jr. and Daniel G. Faith
+ 16 – 19 June 2008; Duke University, Durham, NC
 
-*4:00-5:30 p.m.: Pre-Meeting tour of NESCent
+=Themes of the discussion:=
 
-=Thursday, Feb 30, 2007= 
+# “What is an integrated biodiversity research plan”?
+# new tools/methods (in comparative phylogeography)
+# extensions of phylogeography into other disciplines (macroecology, etc.) 
+# effective linkages to DIVERSITAS/GBIF objectives, the emerging GEO Global Biodiversity Observation Network, & conservation
+# future collaborative review papers, research proposals, etc.
+# information exchange across disciplines
 
-*7:45 a.m.: Millennium shuttle to NESCent
-*8:00 a.m.: Last Millennium shuttle to NESCent
-*8:00-8:30 a.m.: Coffee, bagels, fruit, etc. at NESCent
-*9:30-9:50 a.m.: speaker 1, UNC-Chapel Hill, [[Media:speak1.ppt |title 1]]
-*... ...
-*10:15-10:35 a.m.: BREAK
-*10:40-11:10 a.m.: speaker 2, Duke University, [[Media:speak2.ppt |title 2]]
-* ... ...
-*12: 30- 2:00 p.m.: LUNCH
-* ... ...
+==DAY 1==
 
-=Friday,  Feb 31, 2007=
-* ... ...
+* 7:45 – first Millennium shuttle to NESCent
+*8:00 – last Millennium shuttle to NESCent
+*8:30 – short introductions by JW Sites, Jr. & D. Faith (~ 10 min each, with introductions of all Catalysis Group and PIRE participants)
+*8:50 – Jeff Sturkey, Kathleen Smith: NESCent introductions/who they are/details of support for our meeting/how things will be run/filing claims for reimbursements, etc. (~ 10 min) 
+*9:00 – the PIRE-Patagonia project - Jerry
+*9:45 – BREAK
+*10:15 – goals/objectives for Catalysis meeting (Jack/Dan); what products do we envision? 
+*11:00 - wiki tutorial presented by Jim Balhoff
+*11:20 – open up to the group – what goals/objectives/products do we envision?
+
+*Noon – LUNCH (Jeff Sturkey [NESCent] says there are a lot of places close by)
+
+*1:30 – How might geological processes (in Mio-Plio-Pleistocence time frames) impact Recent species distributions?
+**J. Rabassa* (15 min) (*designated ‘leader’)
+**D. Ariztegui (15 min)
+**P. Moreno (15 min)
+*2:15 – group discussion – focus on goals/objectives/products
+*2:45 – BREAK
+*3:15 – breakout groups; self-select?
+*4:00 – regroup & summarize results of group discussions (with respect to goals/objectives/products)
+*5:00 – 5:30 – decompression
+*6:30 – DINNER
+*8:30 – shuttle from NESCent back to the Millennium Hotel
+
+==DAY 2==
+
+*7:45 – first Millennium shuttle to NESCent
+*8:00 – last Millennium shuttle to NESCent
+*8:30 - multi-species systems – what can we learn from other studies?
+**Jim McGuire (15 min)
+**Ann Yoder* (15 min)
+**Jon Waters (15 min)
+*9:15 – group discussion – focus on goals/objectives/questions
+*9:45 – BREAK
+*10:15 – new approaches to comparative phylogeography
+**Catherine Graham* (15 min)
+**Bryan Carstens (15 min)
+**Mike Hickerson (15 min)
+**David Kidd (15 min)
+*11:15 – breakout groups
+
+*12:00 – 1:15 – LUNCH (close by again)
+
+*1:30 – regroup & summarize results of group discussions
+*2:30 – broader implications/new directions – what can we learn from other studies?
+**Christy McCain (15 min)
+**Jeannine Cavender-Bares* (15 min)
+**Brian McGill (15 min) – 
+*3:15 – BREAK
+*3:45 – break-out groups; self-select, but different from previous teams
+*4:30 – regroup and summarize results – goals/objectives/products
+*5:15 – 5:30 – decompression
+*6:30 – DINNER
+*8:30 – shuttle from NESCent back to the Millennium Hotel
+
+==DAY 3==
+
+*7:45 – first Millennium shuttle to NESCent
+*8:00 – last Millennium shuttle to NESCent
+*8:30 – conservation and data-basing implications
+**Dan Faith* (15 min)
+**Jeremy Kerr (15 min)
+**Simon Ferrier (15 min)
+**Leslie Rissler (15 min)
+*9:30 – breakout groups; rotate again
+*10:15 - BREAK
+*10:45 – regroup and summarize results; develop final list of longer-term goals, objectives, products, new collaborations, etc.
+**Possible additional key themes for discussion – 
+***how DNA barcoding may/may-not be used for conservation assessments
+***phylogeny and climate change impacts
+
+*12:00 – LUNCH or DEPART 
+
+*1:30 – begin annual meeting of PIRE-Patagonia project (Catalysis Group members welcome if they must wait on late flight)
+*8:30 – shuttle from NESCent back to the Millennium Hotel
