Change to wiki page

--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -4,6 +4,8 @@
  Jack W. Sites, Jr. and Daniel G. Faith
  16 – 19 June 2008; Duke University, Durham, NC
 
+[[Media:Agenda | Download Agenda]]
+
 =Themes of the discussion:=
 
 # “What is an integrated biodiversity research plan”?
