Change to wiki page

--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -4,7 +4,7 @@
  Jack W. Sites, Jr. and Daniel G. Faith
  16 – 19 June 2008; Duke University, Durham, NC
 
-[[Media:Agenda | Download Agenda]]
+[[Media:Agenda.pdf | Download Agenda]]
 
 =Themes of the discussion:=
 
