/* Other Important Information for Non-U.S. Citizens */

--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -50,9 +50,7 @@ Duke University faculty and staff must furnish original receipts for meals and, 
 ==Other Important Information for Non-U.S. Citizens==
 We would appreciate you letting us know if you are not a US citizen.  If you will be arriving from outside the United States, we will provide you with a formal letter of invitation from NESCent briefly outlining the purpose of your visit.  This letter may be required during your travel to the US, and we encourage you to keep a copy with you.  Please send via email your office mailing address so that we can send the formal letter of invitation.  
 
-For all non-US citizens we will need to make a copy of your passport and I-94 and/or visa waiver during your visit.   You must meet with a NESCent staff member for photo-copying and completion of Duke University and NESCent International Guest forms.  This includes citizens of other countries already in the US.  We cannot process your expense reimbursements without this documentation.
-
-
+For all non-US citizens we will need to make a copy of your passport, I-94, visa waiver, and/or permanent resident card during your visit.   You must meet with a NESCent staff member for photo-copying and completion of Duke University and NESCent International Guest forms.  This includes citizens of other countries already in the US.  We cannot process your expense reimbursements without this documentation.
 
 =NSF/NESCent Travel Policy=
 
