--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -3,16 +3,9 @@
 The following information is an overview of your travel plans for your trip to NESCent.  Please also see our NSF/NESCent Travel Policies section.
 
 ==Hotel Arrangements:==
-You will be staying at the 
+NESCent will pay for your room, while you will be responsible for all other incidental room charges, including phone calls and meals you might charge to your room.
 
- Millennium Hotel 
- 2800 Campus Walk Avenue
- Durham, NC  27705
- telephone:  919-383-8575
-
-NESCent will arrange your hotel reservations.  Contact Danielle Wilson at NESCent via email [mailto:danielle@nescent.org danielle@nescent.org ] or 919-668-4545 to make any changes to your room reservations.  The rooms will be directly billed to NESCent.  We will pay for your room, while you will be responsible for all other incidental room charges, including phone calls and meals you might charge to your room.  If you are bringing a roommate, there will be an additional charge of $20.00 per person per night payable to the Millennium Hotel.
-
-If your travel plans change and you are not able to attend the meeting, please assist NESCent in avoiding any hotel penalties by notifying us as soon as possible.
+If your travel plans change and you are not able to attend the meeting, please assist NESCent in avoiding any hotel penalties by contacting Danielle Wilson at NESCent via email Danielle@nescent.org or phone at 919-668-4545 to make any changes or cancel your room reservations.
 
 ==Travel Arrangements:==
 Please contact our travel agent, [mailto:nate@galegentrytravel.com Nate Matthews], as soon as possible to arrange your airline travel.  Please note that as a condition of your invitation to participate in NESCent meetings, we ask that your travel plans be ticketed no less than 21 days in advance of your meeting.  In some circumstances, particularly for international travel, we may request that you extend your stay to include a Saturday night.  In addition, our travel agent has been instructed to search for lower-cost airfares for all attendees.  
