--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -9,19 +9,15 @@ NESCent will pay for your room, while you will be responsible for all other inci
 If your travel plans change and you are not able to attend the meeting, please assist NESCent in avoiding any hotel penalties by contacting Danielle Wilson at NESCent via email Danielle@nescent.org or phone at 919-668-4545 to make any changes or cancel your room reservations.
 
 ==Travel Arrangements:==
-Please contact our travel agent, [mailto:nate@galegentrytravel.com Nate Matthews], as soon as possible to arrange your airline travel.  Please note that as a condition of your invitation to participate in NESCent meetings, we ask that your travel plans be ticketed no less than 21 days in advance of your meeting.  In some circumstances, particularly for international travel, we may request that you extend your stay to include a Saturday night.  In addition, our travel agent has been instructed to search for lower-cost airfares for all attendees.  
+Your airfare will be directly billed to NESCent.  A condition of your invitation to participate in any NESCent event, we ask that your travel plans be ticketed no less than 21 days in advance of your arrival date.  In some circumstances, particularly for international travel, we may request that you extend your stay to include a Saturday night.  In addition, our travel agent has been instructed to search for lower-cost airfares for all attendees.  
 
 NESCent cannot guarantee the reimbursement of any non-NESCent travel agent travel arrangements.  Attendees wishing to make their own travel plans should seek approval prior to making any financial commitments on their part.
 
-Your early selection of flights will provide you the widest choices.  In addition, please note that the National Science Foundation requires that we use U.S. air carriers and coach class. 
+In addition, the National Science Foundation requires that we use U.S. air carriers and coach class.  If you are a Federal employee, please contact Danielle Wilson at NESCent immediately before arranging your airline travel.
 
-Your airfare will be directly billed to NESCENT.  Although we have provided the travel agency with your names, we ask that you contact Nate Matthews.  His contact information is:
-
-Nate Matthews (although other agents at the firm can assist you as well)
- Gale Gentry Travel
- Telephone:  919-787-2511 ext. 428
- Toll Free Telephone:  800-633-9350
- Email:  [mailto:nate@galegentrytravel.com nate@galegentrytravel.com]
+***SPECIAL NOTE TO INTERNATIONAL VISITORS TO THE UNITED STATES ***
+Beginning January 12, 2009, all VWP (Visa Waiver Program) nationals and citizens will be required to obtain a travel authorization prior to initiating travel to the United States under the Visa Waiver Program.  This authorization may be obtained on-line through a free Internet application administered by the Department of Homeland Security through a U.S. government web site.  There is no fee for completion of an ESTA application.
+For complete information, please go to:  http://www.cbp.gov/xp/cgov/travel/id_visa/esta/
 
 ==Arrival at Raleigh/Durham International Airport (RDU):==
 We suggest using the Millennium Hotel airport shuttle service.  This shuttle will be directly billed to NESCent.  When you arrive at RDU, please call the [http://www.millenniumhotels.com/MCIL.nsf/LU_HOTELDOC/113$$HotelDescription?OpenDocument Millennium Hotel] via the display of hotels at the Baggage claim area.  You may pick up the receiver and push the appropriate button for the Millennium Hotel, or you may call the Millennium at (919) 383-8575.  Please tell the attendant that you have a reservation and wish to be picked up at the RDU airport.  The hotel is approximately 20 minutes away.  Any ground transportation questions arising immediately after arrival can be answered at the RDU Information Desk near the Baggage Claim area.
