--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -15,7 +15,7 @@ NESCent cannot guarantee the reimbursement of any non-NESCent travel agent trave
 
 In addition, the National Science Foundation requires that we use U.S. air carriers and coach class.  If you are a Federal employee, please contact Danielle Wilson at NESCent immediately before arranging your airline travel.
 
-***SPECIAL NOTE TO INTERNATIONAL VISITORS TO THE UNITED STATES ***
+'''SPECIAL NOTE TO INTERNATIONAL VISITORS TO THE UNITED STATES''' 
 Beginning January 12, 2009, all VWP (Visa Waiver Program) nationals and citizens will be required to obtain a travel authorization prior to initiating travel to the United States under the Visa Waiver Program.  This authorization may be obtained on-line through a free Internet application administered by the Department of Homeland Security through a U.S. government web site.  There is no fee for completion of an ESTA application.
 For complete information, please go to:  http://www.cbp.gov/xp/cgov/travel/id_visa/esta/
 
