/* Getting to NESCent: */

--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -24,7 +24,7 @@ For complete information, please go to:  http://www.cbp.gov/xp/cgov/travel/id_vi
 Upon arrival to the airport, please take a taxi to the hotel.  The taxis are available outside the Baggage Claim areas.
 
 ==Getting to NESCent:==
-We will also coordinate daily shuttle service between the hotel and the NESCent office for your meeting.
+NESCent will coordinate daily shuttle service between the hotel and the NESCent office for your visit.  We will also pre-schedule your out-bound airport shuttles (if applicable).  A schedule will be distributed upon your arrival at NESCent.
 
 ==Meal Arrangements:== 
 ===For Non-Duke University Employees - Meal Per Diem:===
