--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -27,14 +27,14 @@ Upon arrival to the airport, please take a taxi to the hotel.  The taxis are ava
 NESCent will coordinate daily shuttle service between the hotel and the NESCent office for your visit.  We will also pre-schedule your out-bound airport shuttles (if applicable).  A schedule will be distributed upon your arrival at NESCent.
 
 ==Meal Arrangements:== 
-===For Non-Duke University Employees - Meal Per Diem:===
-We will be basing your meal reimbursement on the US GSA Federal per diem rates.  This includes 75% per diem reimbursement on your arrival and departure days.  A major advantage of this system is that you are not required to keep or furnish NESCent with any meal receipts.  This system also offers significant flexibility in your choices of cuisine and meal times.  '''Please note that NSF prohibits the reimbursement for alcoholic beverages.'''  After the meeting, NESCent will process reimbursements which will be mailed within approximately 45 days.  Duke University policy dictates that these reimbursements must be sent to your home address.  You will be asked to complete a home address form including your social security number and return it to NESCent prior to your arrival.
-	
-===For Non-U.S. Citizens - Original Receipts:===
-Because per diem reimbursements for foreign nationals can be taxed at 36%, it is recommended that NESCent reimbursement you based on original meal receipts.  '''NSF prohibits the reimbursement for any alcohol.  Please note that Duke will not reimburse you for your meal if alcoholic beverages appear on your receipt.'''  Please consult with your restaurant server to insure that alcoholic beverages do not appear on your receipt for NESCent.  After the meeting, NESCent will process reimbursements which will be mailed within approximately 45 days after receiving your original receipts.  Duke University policy dictates that these reimbursements must be sent to your home address.  You will be asked to complete a home address form and return it to NESCent prior to your arrival.
-
-===For Duke University Employees - Original Receipts:===
-Duke University faculty and staff must furnish original receipts for meals and, if possible, use a Duke Procurement Card to purchase meals.  '''NSF prohibits the reimbursement for any alcohol.  Please note that Duke will not reimburse you for your meal if alcoholic beverages appear on your receipt.'''  Please consult with your restaurant server to insure that alcoholic beverages do not appear on your receipt for NESCent.  
+   Non-Duke University Employees – Per Diem:
+      1. NESCent is limited by the US Government’s meal per diem rates.  NESCent may modify these rates.
+      2. Due to Duke University policies, it is not possible to offer attendees a meal program of NESCent-paid meals and partial per diems.     
+         We have found it more efficient to provide attendees with a post-meeting reimbursement for a pre-established GSA-related per diem 
+         rate. Attendees (non-Duke attendees) are not required to provide NESCent with any meal receipts as part of this program.
+      3. '''''Please note that NSF prohibits the reimbursement for any alcohol'''''.  
+      4. NESCent will communicate to your attendees the reimbursement rates for the meeting.
+      5. NESCent may modify the reimbursement rates for meetings.
 
 ==Other Important Information for Non-U.S. Citizens==
 We would appreciate you letting us know if you are not a US citizen.  If you will be arriving from outside the United States, we will provide you with a formal letter of invitation from NESCent briefly outlining the purpose of your visit.  This letter may be required during your travel to the US, and we encourage you to keep a copy with you.  Please send via email your office mailing address so that we can send the formal letter of invitation.  
