/* Other Important Information for Non-U.S. Citizens */

--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -36,10 +36,13 @@ NESCent will coordinate daily shuttle service between the hotel and the NESCent 
       4. NESCent will communicate to your attendees the reimbursement rates for the meeting.
       5. NESCent may modify the reimbursement rates for meetings.
 
-==Other Important Information for Non-U.S. Citizens==
-We would appreciate you letting us know if you are not a US citizen.  If you will be arriving from outside the United States, we will provide you with a formal letter of invitation from NESCent briefly outlining the purpose of your visit.  This letter may be required during your travel to the US, and we encourage you to keep a copy with you.  Please send via email your office mailing address so that we can send the formal letter of invitation.  
-
-For all non-US citizens we will need to make a copy of your passport, I-94, visa waiver, and/or permanent resident card during your visit.   You must meet with a NESCent staff member for photo-copying and completion of Duke University and NESCent International Guest forms.  This includes citizens of other countries already in the US.  We cannot process your expense reimbursements without this documentation.
+==Non-US Citizens – Original Receipts:==
+  1.	Because per diem reimbursements for foreign nationals can be taxed at 36%, it is recommended that NESCent reimbursement you based on  
+        original meal receipts.
+  2.	NSF prohibits the reimbursement for any alcohol.  Please note that we cannot reimburse you for your meal if alcoholic beverages appear on 
+        your receipt. Please consult with your restaurant server to insure that alcoholic beverages do not appear on your receipt for NESCent.
+  3.	Amounts for meals are based upon the US Government’s per diem rates.  These pre-established and meeting-specific rates will be 
+        communicated to participants prior to the meeting and will outline additional details and the process for reimbursing their expenses.
 
 =NSF/NESCent Travel Policy=
 
