--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -68,11 +68,9 @@ NESCent will coordinate daily shuttle service between the hotel and the NESCent 
 ==Meal Reimbursement:==  
 
 ===Non-Duke University Employees - Per Diem:===
-#NESCent is limited by the US Government's meal per diem rates.  NESCent may modify these rates.
-#Due to Duke University policies, it is not possible to offer attendees a meal program of NESCent-paid meals and partial per diems.  We have found it more efficient to provide attendees with a post-meeting reimbursement for a pre-established GSA-related per diem rate.  Attendees (non-Duke attendees) are not required to provide NESCent with any meal receipts as part of this program.
-#'''Please note that NSF prohibits the reimbursement for any alcohol.'''
-#NESCent will communicate to your attendees the reimbursement rates for the meeting.
-#NESCent may modify the reimbursement rates for meetings.
+#	Duke University faculty and staff must furnish original receipts for meals and, if possible, use a Duke Procurement Card to purchase meals.  
+#	NSF prohibits the reimbursement for any alcohol.  Please note that we cannot reimburse you for your meal if alcoholic beverages appear on your receipt.  Please consult with your restaurant server to insure that alcoholic beverages do not appear on your receipt for NESCent. 
+#       Amounts for meals are based upon the US Government’s per diem rates.  These pre-established and meeting-specific rates will be communicated to Duke employee participants prior to the meeting and will outline additional details and the process for reimbursing their expenses.
 
 ===Non-US Citizens - Original Receipts:===	
 #Because per diem reimbursements for foreign nationals can be taxed at 36%, it is recommended that NESCent reimbursement you based on original meal receipts.
