--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -47,11 +47,11 @@ NESCent will coordinate daily shuttle service between the hotel and the NESCent 
 =NSF/NESCent Travel Policy=
 
 ==Flight Arrangements:==
-#We are required by NSF to use US-based air-carriers and require coach-class tickets.  Occasionally, there are situations where US carriers are not available.  We address these on a case-by-case basis.  
-#There are rare occasions where an attendee may request an exemption to coach-class travel for medical reasons.  These are addressed on a case-by-case basis and may require a written statement from the attendee's physician for full consideration.  This is a NSF policy.
-#NESCent expects all participants to select lower cost, 21-day advance purchase tickets through NESCent's selected travel agent.  In some circumstances, particularly for international travel, we may request that you extend your stay to include a Saturday night.  We will provide all attendees our travel agent's name, email address, toll-free telephone number and related contact information, and ask them to contact our agent.  
-#All flight arrangements should be made through a NESCent travel agent.  Once attendees have made their travel plans and their tickets have been purchased, it will be the responsibility of the attendee to pay for any non-emergency ticket changes.  Emergency ticket changes (such as family, or medical issues, etc.) are addressed upon a case-by-case basis and may not be approved or paid for by NESCent.
-#Although cancelled tickets are usually in the name of the attendee, NESCent hopes that the attendee will be able to use the canceled ticket a for a future NESCent activity. 
+#	We are required by NSF to use US-based air-carriers and require coach-class tickets.  Occasionally, there are situations where US carriers are not available.  We address these on a case-by-case basis.    
+#	There are rare occasions where an attendee may request an exemption to coach-class travel for medical reasons.  These are addressed on a case-by-case basis and may require a written statement from the attendee’s physician for full consideration.  This is a NSF policy.
+#	NESCent expects all participants to select lower cost, 21-day advance purchase tickets through NESCent’s selected travel agent.  In some circumstances, particularly for international travel, we may request that you extend your stay to include a Saturday night.  We will provide all attendees our travel agent’s name, email address, toll-free telephone number and related contact information, and ask them to contact our agent.    
+#	All flight arrangements should be made through a NESCent travel agent.  Once attendees have made their travel plans and their tickets have been purchased, it will be the responsibility of the attendee to pay for any non-emergency ticket changes.  Emergency ticket changes (such as family, or medical issues, etc.) are addressed upon a case-by-case basis and may not be approved or paid for by NESCent.
+#	Although cancelled tickets are usually in the name of the attendee, NESCent hopes that the attendee will be able to use the canceled ticket a for a future NESCent activity.
 
 ==Ground transportation:==
 #Attendees may choose to drive to their meeting at NESCent.  In these cases and at NESCent's discretion, NESCent may choose to offer the attendee reimbursement equal to the GSA mileage rate for the round-trip drive or a 21-day advance purchase air fare, whichever is lower.  Long distance driving reimbursements will be evaluated on a case-by-case basis.
