--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -36,9 +36,7 @@ Non-Duke University Employees – Per Diem:
 
 ==Non-US Citizens – Original Receipts:==
 # Because per diem reimbursements for foreign nationals can be taxed at 36%, it is recommended that NESCent reimbursement you based on original meal receipts.  
-    
-# NSF prohibits the reimbursement for any alcohol.  Please note that we cannot reimburse you for your meal if alcoholic beverages appear on your receipt. Please consult with your restaurant server to insure that alcoholic beverages do not appear on your receipt for NESCent.
- 
+# '''''NSF prohibits the reimbursement for any alcohol.''  ''Please note that we cannot reimburse you for your meal if alcoholic beverages appear on your receipt'''''.  Please consult with your restaurant server to insure that alcoholic beverages do not appear on your receipt for NESCent.  
 # Amounts for meals are based upon the US Government’s per diem rates.  These pre-established and meeting-specific rates will be communicated to participants prior to the meeting and will outline additional details and the process for reimbursing their expenses.
 
 =NSF/NESCent Travel Policy=
