--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -48,6 +48,10 @@ Non-Duke University Employees – Per Diem:
 #	All flight arrangements should be made through a NESCent travel agent.  Once attendees have made their travel plans and their tickets have been purchased, it will be the responsibility of the attendee to pay for any non-emergency ticket changes.  Emergency ticket changes (such as family, or medical issues, etc.) are addressed upon a case-by-case basis and may not be approved or paid for by NESCent.
 #	Although cancelled tickets are usually in the name of the attendee, NESCent hopes that the attendee will be able to use the canceled ticket a for a future NESCent activity.
 
+
+==Luggage:==
+#	'''NESCent will not reimburse attendees for expenses related to luggage.'''
+
 ==Ground transportation:==
 #Attendees may choose to drive to their meeting at NESCent.  In these cases and at NESCent's discretion, NESCent may choose to offer the attendee reimbursement equal to the GSA mileage rate for the round-trip drive or a 21-day advance purchase air fare, whichever is lower.  Long distance driving reimbursements will be evaluated on a case-by-case basis.
 #NESCent will pay for shuttles to and from the Raleigh/Durham (RDU) airport to the selected hotel and NESCent, and strongly suggests using the selected hotel's shuttle.
